option alignment fix in note

--- a/src/components/Note/note.css
+++ b/src/components/Note/note.css
@@ -31,7 +31,7 @@
 }
 
 .note-options-set {
-  justify-content: flex-end;
+  justify-content: space-between;
   gap: 10px;
   align-items: baseline;
 }
@@ -45,7 +45,7 @@
   border-radius: 10px;
   border: 1px solid var(--foreground-color);
   padding: 4px;
-  color: var(--foreground-color);
+  color: var(--accent-one-color);
   background-color: var(--accent-four-color);
 }
 
